--- a/index.css
+++ b/index.css
@@ -27,17 +27,20 @@ body{
     transform: translateX(-50%);
 }
 .bar{
-    height: 10px;
-    width: 10px;
-    border: 2px solid rgb(82, 82, 232);
+    height: 20px;
+    width: 20px;
     background-color: rgb(82, 82, 232);
     border-radius: 50%;
     cursor: pointer;
     margin-left: 8px;
-    transition: all .4s ease;
+    transition: background-color .4s ease;
 }
 .bar:hover{
-
+    background-color: white;
+}
+.bar:active{
+    border: 2px solid white;
+    background-color: transparent;
 }
 
 input[name='r']{
@@ -58,15 +61,15 @@ input[name='r']{
     width: 100%;
     height: 100%;
 }
-#r1:checked ~ .s1{
+#r1:checked ~ .images .s1{
     margin-left: 0;
 }
-#r2:checked ~ .s1{
+#r2:checked ~ .images .s1{
     margin-left: -25%;
 }
-#r3:checked ~ .s1{
+#r3:checked ~ .images .s1{
     margin-left: -50%;
 }
-#r4:checked ~ .s1{
+#r4:checked ~ .images .s1{
     margin-left: -75%;
 }
